--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -18,5 +18,8 @@ a {
 
 // Add your own site style includes here
 @import "site/layout.less";
+
 @import "site/index.less";
 @import "site/contact.less";
+
+@import "site/popup.less";
