--- a/public/styles/site/index.less
+++ b/public/styles/site/index.less
@@ -24,13 +24,14 @@
 	}
 }
 
-.agenda {
+.agenda, .news {
 	display: inline-block;
 	width: 100%;
 	background: lightblue;
+	box-sizing: border-box;
 	padding: 20px;
 
-	.event {
+	.event, .post {
 		display: inline-block;
 		width: 20%;
 		margin-right: 5%;
@@ -43,36 +44,6 @@
 	}
 }
 
-.popup-wrapper {
-	display: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background: blue;
-	overflow: scroll;
-
-	.event-popup {
-		position: relative;
-		width: 90%;
-		height: 2000px;
-		margin: 20px 5%;
-		background: silver;
-
-		button.close-popup {
-			position: absolute;
-			right: 20px;
-			top: 20px;
-			height: 30px;
-			width: 30px;
-			background: red;
-			border: none;
-			cursor: pointer;
-		}
-	}
-}
-
-.popup-active .popup-wrapper {
-	display: block;
+.news {
+	background: lightgreen;
 }
