--- a/templates/views/post.pug
+++ b/templates/views/post.pug
@@ -2,8 +2,8 @@ extends ../layouts/default
 
 block content
 	.container: .row: .col-sm-10.col-sm-offset-1.col-md-8.col-md-offset-2
-		article
-			p: a(href='/blog') &larr; back to the blog
+		article.post
+			p: a(href='/') &larr; back to the main page
 			hr
 			if !data.post
 				h2 Invalid Post.
