--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -14,7 +14,7 @@ html
 
 		//- Customise the stylesheet for your site by editing /public/styles/site.less
 		//- All .less files will be automatically compiled and minified in production.
-		link(href="/styles/site.min.css" type="text/css" rel="stylesheet")
+		link(href="/styles/site.min.css", rel="stylesheet")
 		//- link(href="/styles/print.min.css" type="text/css" rel="stylesheet" media="print")
 
 		//- This file provides the default styling for the KeystoneJS Content Editor
