--- a/public/styles/site/agenda.less
+++ b/public/styles/site/agenda.less
@@ -59,6 +59,7 @@
 		}
 
 		label {
+			user-select: none;
 			cursor: pointer;
 			text-transform: lowercase;
 			position: relative;
@@ -105,6 +106,7 @@
 		}
 
 		label {
+			user-select: none;
 			cursor: pointer;
 			float: left;
 			position: relative;
@@ -121,6 +123,7 @@
 				position: absolute;
 				width: calc(100% ~"-" 4px);
 				border-bottom: 1px solid white;
+				transition: border 0.2s ease-out;
 			}
 		}
 
@@ -146,6 +149,7 @@
 	}
 
 	.event {
+		display: inline-block;
 		width: 2 * @column;
 		padding: 0 @gutter / 2;
 		margin-bottom: @gutter;
@@ -171,9 +175,10 @@
 		}
 
 		.title {
-			display: block;
 			font-size: 30px;
 			font-weight: bold;
+			overflow: hidden;
+			.multiline-ellipsis(3, 30px, 1.15);
 		}
 
 		.day {
