--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -44,6 +44,9 @@ block content
 											span.category= event.category.name
 										strong.title= event.title
 										time.day(datetime=event._.startDate.format('YYYY-MM-DDTHH:mm'))= event._.startDate.format('D')
+								div.no-events-in-filter
+						else
+							p.no-events-in-month Aucun évènement n'est programmé ce mois-ci
 			.controls
 				.left
 				.right
