Mail test again

--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -46,7 +46,7 @@ block content
 										time.day(datetime=event._.startDate.format('YYYY-MM-DDTHH:mm'))= event._.startDate.format('D')
 								div.no-events-in-filter
 						else
-							p.no-events-in-month Aucun évènement n'est programmé ce mois-ci
+							p.no-events-in-month Aucun évènement n'est programmé ce mois-ci.
 			.controls
 				.left
 				.right
