--- a/public/styles/site/agenda.less
+++ b/public/styles/site/agenda.less
@@ -244,7 +244,7 @@
 			left: 0;
 			top: 0;
 			width: 100%;
-			margin: 18px 0;
+			margin-top: 30px;
 			text-align: center;
 			color: @color1-a;
 			font-weight: bold;
