Mail form almost done

--- a/public/styles/mixins/variables.less
+++ b/public/styles/mixins/variables.less
@@ -12,6 +12,13 @@
 @white : white;
 @black : black;
 
+@color-success : limegreen;
+@color-error : orange;
+@color-failure : red;
+
+@color-facebook : darkblue;
+@color-twitter : lightblue;
+
 @color1-a : #F79386;
 @color1-b : #FFAD9F;
 @color1-c : #F4D6CE;
