--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -3,6 +3,7 @@
 // =========
 
 @import (less) "../../bower_components/normalize-css/normalize.css";
+@import "site/mapbox.less";
 
 
 // General
@@ -44,4 +45,5 @@ a {
 // partials
 @import "site/agenda.less";
 @import "site/news.less";
+@import "site/event.less";
 @import "site/popup.less";
