--- a/public/styles/site/index.less
+++ b/public/styles/site/index.less
@@ -2,3 +2,34 @@
 .jumbotron {
 	height: 30vh;
 }
+
+footer.contact {
+	width: 100%;
+	background: silver;
+
+	form {
+		display: inline-block;
+		margin-left: 20px;
+		padding: 10px 0;
+		width: 400px;
+	}
+
+	label, input, textarea {
+		display: block;
+		width: 100%;
+		box-sizing: border-box;
+		border: 1 px solid black;
+	}
+
+	input, textarea {
+		padding: 5px 10px;
+	}
+
+	textarea {
+		height: 200px;
+	}
+
+	label {
+		margin-bottom: 10px;
+	}
+}
