--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -47,3 +47,27 @@ header {
 		float: right;
 	}
 }
+
+.sharer {
+	.facebook, .twitter {
+		display: block;
+		float: left;
+		margin-right: 20px;
+		height: 30px;
+		width: 30px;
+	}
+
+	.facebook {
+		background: @color-facebook;
+	}
+
+	.twitter {
+		background: @color-twitter;
+	}
+}
+
+footer {
+	height: 300px;
+	width: 100%;
+	background: silver;
+}
