--- a/templates/views/contact.pug
+++ b/templates/views/contact.pug
@@ -1,34 +1,60 @@
 extends ../layouts/default
-
-block intro
-	.container
-		h1 Contact Us
 		
 block content
-	.container
-		if enquirySubmitted
-			h3 Thanks for getting in touch.
-		else
-			.row: .col-sm-8.col-md-6
-				form(method='post')
-					input(type='hidden', name='action', value='contact')
-					.form-group(class=validationErrors.name ? 'has-error' : null)
-						label Name
-						input(type='text', name='name.full', value=formData['name.full']).form-control
-					.form-group(class=validationErrors.email ? 'has-error' : null)
-						label Email
-						input(type='email', name='email', value=formData.email).form-control
-					.form-group
-						label Phone
-						input(type='text', name='phone', value=formData.phone, placeholder='(optional)').form-control
-					.form-group(class=validationErrors.enquiryType ? 'has-error' : null)
-						label What are you contacting us about?
-						select(name='enquiryType').form-control
-							option(value='') (select one)
-							each type in enquiryTypes
-								option(value=type.value, selected=formData.enquiryType == type.value)= type.label
-					.form-group(class=validationErrors.message ? 'has-error' : null)
-						label Message
-						textarea(name='message', placeholder='Leave us a message...' rows=4).form-control= formData.message
-					.form-actions
-						button(type='submit').btn.btn-primary Send
+	section.contact
+		h1 Contact
+		#map
+		form.form(method='post' onsubmit='return validateForm(this);' autocomplete='on')
+			input#action(type='hidden', name='action', value='contact')
+			label(for='name') Name
+			input(type='text', name='name', placeholder='Nom')
+			label(for='email') Email
+			input(type='email', name='email', placeholder='Email')
+			label(for='phone') Phone
+			input(type='text', name='phone', placeholder='Téléphone (optionnel)')
+			label(for='enquiryType') Sujet
+			select(name='enquiryType')
+				option(value='') (sélectionnez un sujet)
+				each type in enquiryTypes
+					option(value=type.value)= type.label
+				label(for='message') Message
+			textarea(name='message', placeholder='Laissez-nous un message…')= formData.message
+			button(type='submit')
+				span.button-text Send
+				span.mail-loader
+			.result-box(aria-hidden="true")
+				if responses.success
+					p.result-message.success Votre message a été envoyé, merci.
+				if responses.invalidEmail
+					p.result-message.error Erreur&nbsp;: Veuillez entrer une adresse email valide.
+				if responses.missingFields
+					p.result-message.error Erreur&nbsp;: Des champs requis n'ont pas été remplis
+				if responses.invalidCaracters
+					p.result-message.error Erreur&nbsp;: L’email contient des caractères invalides.
+				if responses.failure
+					p.result-message.failure Erreur&nbsp;: Votre message n’a pas pu être envoyé, veuillez réessayer plus tard.
+
+block js
+	// GOOGLE MAPS
+	script
+		| function initMap() {
+		| 	var uluru = {lat: 47.226, lng: -1.556};
+		| 	var map = new google.maps.Map(document.getElementById('map'), {
+		| 		zoom: 16,
+		| 		center: uluru
+		| 	});
+		| 	var marker = new google.maps.Marker({
+		| 		position: uluru,
+		| 		map: map
+		| 	});
+		| }
+	script(async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCX80NEyVT-3xGIrv1GEZkUrtHdi-giF3I&callback=initMap")
+
+	// MAPBOX
+	//- script(src='https://api.mapbox.com/mapbox-gl-js/v0.38.0/mapbox-gl.js')
+	//- script
+	//- 	| mapboxgl.accessToken = 'pk.eyJ1IjoibGUtYmllbnRvdC1ub21tZSIsImEiOiJjajZlMjZhM3AwY3RyMzNvNGJ6cHY2bzE3In0.Anxup6TH3PiVlpoFU0NW6A';
+	//- 	| var map = new mapboxgl.Map({
+	//- 	| container: 'map',
+	//- 	| style: 'mapbox://styles/mapbox/dark-v9'
+	//- 	| });
