--- a/public/styles/site/contact.less
+++ b/public/styles/site/contact.less
@@ -1,31 +1,207 @@
 
-footer.contact {
-	width: 100%;
-	background: silver;
+section.contact {
+	.clearfix();
 
-	form {
-		display: inline-block;
-		margin-left: 20px;
-		padding: 10px 0;
-		width: 400px;
+	h1 {
+		margin-left: @margin;
+	}
+}
+
+#map {
+	height: 500px;
+	width: calc(50% ~"-" @gutter / 2);
+	float: left;;
+	background: #EEEEEE;
+}
+
+section.contact form {
+	width: calc(50% ~"-" @gutter / 2);
+	padding-right: @margin;
+	float: right;
+	box-sizing: border-box;
+
+	h3 {
+		padding-left: 15px;
 	}
 
-	label, input, textarea {
-		display: block;
-		width: 100%;
+	input, textarea, button, select {
+		float: left;
+		clear: both;
 		box-sizing: border-box;
-		border: 1 px solid black;
+		border: none;
+		margin-bottom: 21px;
 	}
 
 	input, textarea {
-		padding: 5px 10px;
+		border-radius: 0;
+		padding: 0 15px;
+		color: @black;
+		transition: border-left 0.2s ease-out 0.1s;
+		border-left: 0px solid transparent;
+		background: #EEEEEE;
+
+		&:focus {
+			outline: none;
+			border-left: 5px solid fade(@color1-a, 40%);
+
+			&.invalid {
+				border-left: 5px solid @color-error;					
+			}
+		}
+
+		&.invalid {
+			border-left: 5px solid darken(fade(@color-error, 70%), 15%);
+		}
+	}
+
+	input, textarea, select {
+		transition: opacity 0.4s ease;
+	}
+
+	input {
+		width: 70%;
+		height: 30px;
 	}
 
 	textarea {
-		height: 200px;
+		resize: none;
+		width: 100%;
+		padding-top: 10px;
+		height: 210px;
+	}
+
+	button {
+		position: relative;
+		padding: 0;
+		height: 30px;
+		line-height: 32px;
+		min-width: 60px;
+		background: #EEEEEE;
+		transition: width 0.3s ease-out;
+
+		&:active {
+			background: fade(@black, 20%);
+		}
+
+		.button-text {
+			transition: opacity 0.3s ease-out 0.1s;
+			opacity: 1;
+		}
+
+		.mail-loader {
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			text-align: center;
+			opacity: 0;
+			transition: opacity 0.2s ease-in;
+
+			&:after {
+				display: inline-block;
+				content: "";
+				position: relative;
+				bottom: 4px;
+				left: -3px;
+				width: 6px;
+				height: 6px;
+				border-radius: 100% 0 0 0;
+				border-top: 2px solid fade(@black, 80%);
+				border-left: 2px solid fade(@black, 80%);
+				transform: translateZ(0);
+				transform-origin: 100% 100%;
+				animation: sending-mail 0.8s infinite linear;
+			}
+		}
 	}
 
 	label {
-		margin-bottom: 10px;
+		.assistive-hide();
 	}
+
+	::-webkit-input-placeholder {
+	   color: fade(@black, 50%);
+	}
+
+	:-moz-placeholder {
+	   color: fade(@black, 50%);
+	}
+
+	::-moz-placeholder {
+	   color: fade(@black, 50%);
+	}
+
+	:-ms-input-placeholder {
+	   color: fade(@black, 50%);
+	}
+
+	.result-box {
+		float: right;
+	}
+
+	.result-message {
+		display: none;
+		float: left;
+		clear: both;
+		padding: 3px 7px 2px 9px;
+		margin: 5px 0;
+		line-height: 30px;
+		white-space: nowrap;
+		opacity: 0;
+
+		&.success {
+			background: fade(@color-success, 40%);
+		}
+
+		&.error {
+			background: fade(@color-error, 40%);
+		}
+
+		&.failure {
+			background: fade(@color-failure, 40%);
+		}
+
+		&.show {
+			opacity: 1;
+			display: inline-block;
+			animation: show-message 0.5s ease-out forwards;
+		}
+	}
+
+	&.loading {
+		textarea, input, select {
+			opacity: 0.5;
+		}
+
+		textarea, input, button {
+			pointer-events: none;
+		}
+
+		button {
+			.button-text {
+				opacity: 0;
+				transition: opacity 0.2s ease-in;
+			}
+
+			.mail-loader {
+				opacity: 1;
+				transition: opacity 0.3s ease-out 0.2s;
+			}
+		}
+	}
+}
+
+@keyframes sending-mail {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes show-message {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
 }
