--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -1,4 +1,5 @@
 include ../mixins/flash-messages
+include ../mixins/sharer
 
 doctype html
 html
@@ -12,21 +13,12 @@ html
 		title= title
 		link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
 
-		//- Customise the stylesheet for your site by editing /public/styles/site.less
-		//- All .less files will be automatically compiled and minified in production.
 		link(href="/styles/site.css", rel="stylesheet")
 		//- link(href="/styles/print.min.css" type="text/css" rel="stylesheet" media="print")
 
 		//- This file provides the default styling for the KeystoneJS Content Editor
 		if user && user.canAccessKeystone
 			link(href="/keystone/styles/content/editor.min.css", rel="stylesheet")
-
-		//- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
-		//- Safely remove this block if you are not targeting IE8
-		//-[if lt IE 9]
-			script(src="//cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.js")
-			script(src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js")
-		//-[endif]
 
 		//- Include template-specific stylesheets by extending the css block
 		block css
@@ -75,35 +67,15 @@ html
 
 
 		//- FOOTER
-		footer.contact
-			form
-				label nom
-				input
-				label email
-				input
-				label sujet
-				input
-				label message
-				textarea
+		footer
 
 
 		//- JAVASCRIPT
-
-		//- jQuery 1.11.3 is included by default, and required by both Bootstrap
-		//- and the KeystoneJS Content Editor. If you are not targeting IE8,
-		//- you can upgrade to 2.1.4 (also bundled) for better performance.
-		//- script(src='/js/jquery/jquery-1.11.3.min.js')
-
-		//- Customise which Bootstrap javascript files are served by including
-		//- them specifically here, instead of bootstrap-3.3.5.min.js
-		//- script(src='/js/bootstrap/bootstrap-3.3.5.min.js')
 
 		//- The KeystoneJS Content Editor provides support for ks-editable data attributes,
 		//- which generate links to edit content for users who can access Keystone
 		if user && user.canAccessKeystone
 			script(src='/keystone/js/content/editor.js')
 
-		//- Add scripts that are globally required by your site here.
-
-		//- Include template-specific javascript files by extending the js block
+		script(src="/js/script.min.js")
 		block js
