Agenda now supports pseudoWeeks

--- a/public/styles/admin.less
+++ b/public/styles/admin.less
@@ -1,38 +1,40 @@
-#wrap {
-	width: 85%;
-	float: right;
 
-	#header {
-		position: fixed;
-		height: 100%;
-		left: 0;
-		top: 0;
-		width: 15%;
-	}
-}
+// @navbar-color: red;
 
-#footer {
+// .primary-navbar {
+// 	background: @navbar-color;
+// }
+
+// .primary-navbar__item--active {
+// 	box-shadow: 2px 0 0 @navbar-color;
+
+// 	.primary-navbar__link {
+// 		background: darken(red, 15%);
+// 	}
+// }
+
+// a, .a {
+// 	color: @navbar-color;
+// }
+
+footer {
 	display: none;
 }
 
-.navbar-backtobrand-trigger, .navbar-backtobrand-message {
-	display: none!important;
+.separate_735kq0-o_O-expand_qceg77 {
+	display: none;
 }
 
-.navbar-header {
-	width: 100%;
-	text-align: center;
+.grow_2r5qf-o_O-search_5fcozc {
+	flex: 2 1 0!important;
+}
 
-	.navbar-brand {
-		margin: 30px 0 20px 0!important;
-		width: 100%;
+label[for="endDate"] + div div {
+	div:first-child {
+		display: none;
 	}
-}
 
-
-.navbar-right {
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	width: 100%;
+	div:nth-child(2) {
+		padding-left: 0;
+	}
 }
