--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -44,6 +44,7 @@ a {
 
 // partials
 @import "site/agenda.less";
-@import "site/news.less";
+@import "site/blog.less";
 @import "site/event.less";
+@import "site/post.less";
 @import "site/popup.less";
