--- a/public/styles/site/event.less
+++ b/public/styles/site/event.less
@@ -1,11 +1,7 @@
 article.event {
 	padding: 100px;
 
-	time, .price {
-		display: block;
-	}
-
-	time {
+	.time {
 		margin-bottom: 10px;
 		font-weight: bold;
 	}
