--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -1,6 +1,6 @@
 
 
-header {
+header.nav {
 	background: #F2F2F2;
 	height: 70px;
 	width: 100%;
@@ -36,17 +36,16 @@ header {
 		}
 	}
 
-	.user-nav {
-		li {
-			margin-right: 30px;
-		}
+	.user-nav li {
+		margin-right: 30px;
 	}
 
-	.admin-nav {
+	.admin-nav li {
 		margin-left: 30px;
 		float: right;
 	}
 }
+
 
 .sharer {
 	.facebook, .twitter {
@@ -66,8 +65,20 @@ header {
 	}
 }
 
+
 footer {
 	height: 300px;
 	width: 100%;
-	background: silver;
+	background: #F2F2F2;
+
+	.admin-login {
+		display: inline-block;
+		padding: 20px;
+		float: right;
+		list-style: none;
+
+		a {
+			margin-left: 20px;
+		}
+	}
 }
