--- a/public/styles/site/agenda.less
+++ b/public/styles/site/agenda.less
@@ -31,7 +31,7 @@
 
 	.agenda-head {
 		.clearfix();
-		margin-bottom: 20px;
+		margin-bottom: 50px;
 	}
 
 	fieldset.filter {
@@ -93,36 +93,83 @@
 	}
 
 	fieldset.time-selector {
-		margin: 0 0 95px 0;
+		position: relative;
+		margin: 0;
 		border: none;
 		float: right;
-		width: 50%;
+		width: 4 * @column;
 		padding: 0 @gutter / 2;
 		box-sizing: border-box;
+		height: 28px;
+
+		.time-selector-months {
+			overflow: hidden;
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: @gutter / 2 + 28px;
+			right: @gutter / 2 + 28px;
+			box-sizing: border-box;
+			display: flex;
+			flex-wrap: nowrap;
+			justify-content: left;
+		}
+
+		.next, .prev {
+			z-index: 2;
+			cursor: pointer;
+			position: absolute;
+			top: 0;
+			appearance: none;
+			padding: 0;
+			background: red;
+			width: 28px;
+			height: 28px;
+			border: none;
+			transition: opacity 0.3s ease-in;
+			opacity: 1;
+
+			&.disabled {
+				opacity: 0.2;
+				cursor: default;
+			}
+
+			span {
+				.assistive-hide();
+			}
+		}
+
+		.prev {
+			left: @gutter / 2;
+		}
+
+		.next {
+			right: @gutter / 2;
+		}
 
 		input[type=radio] {
-			appearance: none;
-			visibility: hidden;
 			display: none;
 		}
 
 		label {
 			user-select: none;
+			flex-shrink: 0;
 			cursor: pointer;
-			float: left;
 			position: relative;
 			text-align: center;
 			width: 25%;
 			color: @color1-a;
+			padding: 5px 0 10px 0;
 			text-transform: uppercase;
 			list-style: none;
 
 			&:after {
 				content: "";
 				display: block;
-				bottom: -5px;
+				bottom: 2px;
 				position: absolute;
-				width: calc(100% ~"-" 4px);
+				left: 2px;
+				right: 2px;
 				border-bottom: 1px solid white;
 				transition: border 0.2s ease-out;
 			}
@@ -133,13 +180,14 @@
 
 			&:after {
 				border-bottom: 4px solid white;
-				bottom: -6px;
+				bottom: 1px;
 			}
 		}
 	}
 
 	.months{
 		width: 100%;
+		margin-bottom: 40px;
 
 		.month{
 			.clearfix();
@@ -166,8 +214,7 @@
 			left: @gutter / 2;
 			right: @gutter / 2;
 			bottom: 0;
-			height: 200vh;
-			background: red;
+			height: 1000vh;
 			background: url(/images/pattern.png) repeat;
 		}
 	}
@@ -209,27 +256,6 @@
 			font-weight: bold;
 			font-size: 40px;
 		}
-	}
-}
-
-.controls {
-	.clearfix();
-	padding-bottom: 20px;
-
-	.left, .right {
-		cursor: pointer;
-		display: block;
-		width: 20px;
-		height: 20px;
-		background: red;
-	}
-
-	.left {
-		float: left;
-	}
-
-	.right {
-		float: right;
 	}
 }
 
