Add post, with image, links...etc

--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -20,7 +20,7 @@ a {
 }
 
 .grid {
-	// display: none;
+	display: none;
 }
 
 
@@ -29,6 +29,7 @@ a {
 
 @import "mixins/fonts.less";
 @import "mixins/helpers.less";
+@import "mixins/grid.less";
 @import "mixins/variables.less";
 
 
