--- a/templates/views/blog.pug
+++ b/templates/views/blog.pug
@@ -6,13 +6,10 @@ block content
 			each post in blog
 				a.post(href="/blog/" + post.slug)
 					strong= post.title
-			a.post(href="/blog/")
-				strong Hello
 
-	.popup-wrapper
-		.popup-overlay
-		.popup
-			button.close-popup
-			.popup-content
+	.popup
+		//- .popup-overlay
+		button.close-popup
+		.popup-content
 
 block js
