--- a/public/styles/mixins/variables.less
+++ b/public/styles/mixins/variables.less
@@ -22,6 +22,7 @@
 @color1-a : #F79386;
 @color1-b : #FFAD9F;
 @color1-c : #F4D6CE;
+@color1-d : #F7F1F0;
 
 // @color-success : limegreen;
 // @color-error : orange;
