--- a/public/styles/site/blog.less
+++ b/public/styles/site/blog.less
@@ -1,11 +1,18 @@
 
 .blog {
 	background: lightgreen;
+	width: 100%;
+	padding: 50px @margin - @gutter / 2;
 	box-sizing: border-box;
-	margin-bottom: 100px;
+	.clearfix();
 
 	.post {
-		height: 100px;
+		display: block;
+		width: calc(2 * @column ~"-" @gutter);
+		padding: 10px;
+		margin: 0 @gutter / 2;
 		background: pink;
+		float: left;
+		box-sizing: border-box;
 	}
 }
