--- a/public/styles/site/post.less
+++ b/public/styles/site/post.less
@@ -1,20 +1,73 @@
+
+.popup article.post {
+	position: absolute;
+	height: 100%;
+}
+
 article.post {
-	padding: 100px;
+	width: 100%;
 
-	// .time {
-	// 	margin-bottom: 10px;
-	// 	font-weight: bold;
-	// }
+	.title-wrapper {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		z-index: 2;
+		position: absolute;
+		top: 20vh;
+		margin-top: -80px;
+		height: 180px;
+		right: calc(3 * @column ~"+" @gutter / 2);
+		width: calc(2 * @column ~"-" @gutter);
 
-	// .price {
-	// 	background: fade(green, 30%);
-	// 	padding: 5px 10px;
-	// 	display: inline-block;
-	// }
+		h1 {
+			.multiline-ellipsis(6, 20px, 30px);
+			height: auto;
+			margin: 0;
+			span {
+				background: white;
+			}
 
-	img {
-		width: 100%;
-		margin-bottom: 20px;
+			&.few-words {
+				font-size: 35px;
+				line-height: 54px;
+			}
+		}
+	}
+
+	.description-wrapper {
+		min-height: 70px;
+		position: absolute;
+		background: @color1-c;
+		margin-right: @gutter / 2;
+		right: 0;
+		top: 20vh;
+		max-height: 80vh;
+		overflow: scroll;
+		width: calc(4 * @column ~"-" @gutter);
+
+		.description {
+			padding: 0 50px 200px 50px;
+			margin-top: 130px;
+
+			p {
+				margin-top: 0;
+			}
+		}
+	}
+
+	.img-contain-wrapper {
+		position: absolute;
+		height: 100%;
+		top: 0;
+		left: 0;
+		width: calc(7 * @column ~"-" @gutter);
+		margin-left: @gutter / 2;
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
+		}
 	}
 
 	.description {
